--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <h2 id="h2index">Texto despues de root en index</h2>
+  <h3 class="text-primary">h3 index</h3>
 </body>
 </html>
